--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -58,7 +58,7 @@
   isbn={978-0-596-80279-0}
 }
 @article{garrett2005ajax,
-  title={Ajax: A New Approach to Web Applications},
+  title={{A}jax: {A} {N}ew {A}pproach to {W}eb {A}pplications},
   author={Garrett, J. J.},
   journal={Adaptive path},
   volume={18},
