--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -216,8 +216,8 @@
 %   twoinstructors  - changes the title of instructors to plural form
 %   twosupervisors  - changes the title of supervisors to plural form
 %\usepackage[mydraft,twosupervisors]{aalto-thesis}
-\usepackage[mydraft]{aalto-thesis}
-%\usepackage[mydraft,doublenumbering]{aalto-thesis}
+%\usepackage[mydraft]{aalto-thesis}
+\usepackage[mydraft,doublenumbering]{aalto-thesis}
 %\usepackage{aalto-thesis}
 
 % Own includes
