--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -1,5 +1,5 @@
 @article{berners2010long,
-  title={Long Live the Web},
+  title={{L}ong {L}ive the {W}eb},
   author={Berners-Lee, T.},
   journal={Scientific American},
   volume={303},
@@ -23,35 +23,35 @@
   organization={IEEE}
 }
 @book{pilgrim2010html5,
-  title={HTML5: Up And Running},
+  title={{HTML}5: {U}p {A}nd {R}unning},
   author={Pilgrim, M.},
   year={2010},
   publisher={O'Reilly Media},
   isbn={978-0-596-80602-6}
 }
 @book{crockford2008javascript,
-  title={JavaScript: The Good Parts},
+  title={{J}ava{S}cript: {T}he {G}ood {P}arts},
   author={Crockford, D.},
   year={2008},
   publisher={O'Reilly Media / Yahoo Press},
   isbn={978-0-596-51774-8}
 }
 @book{souders2007high,
-  title={High Performance Web Sites},
+  title={{H}igh {P}erformance {W}eb {S}ites},
   author={Souders, S.},
   year={2007},
   publisher={O'Reilly Media},
   isbn={978-0-596-52930-7}
 }
 @book{souders2009even,
-  title={Even Faster Web Sites},
+  title={{E}ven {F}aster {W}eb {S}ites},
   author={Souders, S.},
   year={2009},
   publisher={O'Reilly Media},
   isbn={978-0-596-52230-8}
 }
 @book{zakas2010high,
-  title={High Performance JavaScript},
+  title={{H}igh {P}erformance {J}ava{S}cript},
   author={Zakas, N. C.},
   year={2010},
   publisher={O'Reilly Media / Yahoo Press},
@@ -77,13 +77,13 @@
   publisher={ACM}
 }
 @article{http1.0rfc,
-  title={RFC 1945: Hypertext Transfer Protocol—HTTP/1.0, May 1996},
+  title={{RFC} 1945: {H}ypertext {T}ransfer {P}rotocol--{HTTP}/1.0, {M}ay 1996},
   author={Berners-Lee, T. and Fielding, R. and Frystyk, H.},
   journal={Status: INFORMATIONAL},
   url={http://www.ietf.org/rfc/rfc1945.txt}
 }
 @article{http1.1rfc,
-  title={RFC 2616: Hypertext transfer protocol--HTTP/1.1, June 1999},
+  title={{RFC} 2616: {H}ypertext {T}ransfer {P}rotocol--{HTTP}/1.1, {J}une 1999},
   author={Fielding, R. and Gettys, J. and Mogul, J. and Frystyk, H. and Masinter, L. and Leach, P. and Berners-Lee, T.},
   journal={Status: Standards Track},
   year={1999},
