Finish device detection.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -479,7 +479,7 @@ Thank you.
 \input{discussion.tex}
 
 % LaTeX test file.
-\input{test.tex}
+%\input{test.tex}
 
 % Load the bibliographic references
 % ------------------------------------------------------------------
