--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -5,10 +5,11 @@
 \label{section:targeting-platforms}
 
 Despite the web browser being the unified environment for different
-platforms, there are lot of differences between different devices. The
+platforms, there are lots of differences between various devices. The
 form factors vary from tiny mobile screens to touch screen tablets and
 desktop monitors and each device and platform has its own feature
-set. There are also known bugs in the browsers that have to handled.
+set. There are also known bugs in the browsers that have to be
+handled.
 
 Therefore, means to detect the user's device are needed. Here we
 present two such means: device detection and feature detection. Both
@@ -18,10 +19,9 @@ of these were used in our conference application.
 
 The User-Agent (\abbr{UA}) \abbr{HTTP} header contains detailed
 information of the web browser and platform where the request
-originates. As we can see from Table~\ref{table:user-agents}, we can
-extract platform and browser specific information from the UA header.
-
-\fixme{Check table reference numbering}
+originates. As we can see from Table~\ref{table:user-agents}
+(\fixme{Check table ref number}), we can extract platform and browser
+specific information from the UA header.
 
 \begin{table}
   \begin{tabular}{ l | l | p{7cm} }
@@ -29,7 +29,7 @@ extract platform and browser specific information from the UA header.
     Samsung Nexus S & Android 2.3.4 & Mozilla/5.0 (Linux; U; Android 2.3.4; en-us; Nexus S Build/GRJ22) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1 \\ \hline
     Apple iPhone & iOS 3.1.3 & Mozilla/5.0 (iPhone; U; CPU iPhone OS 3\_1\_3 like Mac OS X; de-de) AppleWebKit/528.18 (KHTML, like Gecko) Version/4.0 Mobile/7E18 Safari/528.16 \\ \hline
     Apple iPad & iOS 5.0 & Mozilla/5.0 (iPad; CPU OS 5\_0 like Mac OS X) AppleWebKit/534.46 (KHTML, like Gecko) Mobile/9A334 \\ \hline
-    ? & Android & Opera/9.80 (Android; Opera Mini/6.5.26571/26.1023; U; de) Presto/2.8.119 Version/10.54 \\ \hline
+    Unknown & Android & Opera/9.80 (Android; Opera Mini/6.5.26571/26.1023; U; de) Presto/2.8.119 Version/10.54 \\ \hline
   \end{tabular}
   \label{table:user-agents}
   \caption{Example User-Agent strings.}
@@ -37,8 +37,25 @@ extract platform and browser specific information from the UA header.
 
 In the conference application, device detection was used in the
 backend to provide a different offline AppCache manifest to different
-device groups.
+device groups. The detection was also used in defining the assets to
+be preloaded in the application. The devices were divided into four
+categories based on the rules defined in
+Table~\ref{table:device-detection-rules} (\fixme{Check table ref
+  number}). There were serious limitations in this approach, and
+compromises had to be made.
 
+First, there is no way to surely know if the device actually is what
+it reports itself to be. Second, the most important thing to know when
+generating the screen specific assets in the manifest file would have
+been the screen size. However, this information is not present in the
+UA header. We could have listed all the assets for all the devices,
+but then the list of offline assets would have grown too much and, for
+example, have large images also for older mobile phones.
+
+Despite the drawbacks, the received advantages of this approach
+outweighed the possible compromises. The worst that could happen was
+that the device was wrongly classified and the proper resources were
+not downloaded for offline use.
 
 \begin{table}
   \begin{tabular}{ l | l }
@@ -56,16 +73,15 @@ device groups.
   \caption{Device type detection rules.}
 \end{table}
 
-
-However, despite getting detailed information from the UA header, it
-is considered a bad practice to detect a device from it and provide
-device specific bug fixes or additional features. The header can
-easily be changed and some browsers or browser plugins even provide
-preconfigured values for certain browsers or devices for
-spoofing. Also, the device specific bug fixes might become obsolete
-with platform updates, and the application might break due to invalid
-expectations. This is why feature detection is generally the
-recommended option whenever possible.
+Getting platform and browser information from the UA header might look
+tempting and useful, but it is considered a bad practice to detect a
+device from it and provide device specific bug fixes or additional
+features. The header can easily be changed and some browsers or
+browser plugins even provide preconfigured values for certain browsers
+or devices for spoofing. Also, the device specific bug fixes might
+become obsolete with platform updates, and the application might break
+due to invalid expectations. This is why feature detection is
+generally the recommended option whenever possible.
 
 \subsection{Feature Detection}
 
