Add feature detection and screen handling in results.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -45,6 +45,7 @@
 
 \subsection{Responsive Design}
 \subsection{Progressive Enhancement}
+\label{subsection:progressive-enhancement}
 
 \subsection{UI Libraries}
 \subsubsection{jQuery Mobile}
