Add intro to perf tools in results.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -328,6 +328,14 @@ failing only when the network connection seems to be completely down.
 \section{Performance Analysis}
 \label{section:performance-analysis}
 
+We made a quantitative analysis of the conference application
+performance by using two different tools: YSlow and Page Speed. These
+tools analyze the web performance practices of a web page and provide
+optimization guidelines. Many of the rules used in these tools are
+derived from or based on the guidelines defined by Souders
+\cite{souders2007high, souders2009even} and specified in
+Section~\ref{section:performance-guidelines}.
+
 \subsection{YSlow}
 \subsection{Page Speed}
 
