Add title to thesis.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -260,9 +260,9 @@
 % You can just fix the texts there. Just remember to check all the language
 % variants you use (they are all there in the same place).
 % ------------------------------------------------------------------
-\newcommand{\TITLE}{\fixme{Add English title}}
+\newcommand{\TITLE}{Mobile HTML5}
 \newcommand{\FTITLE}{\fixme{Add Finnish title}}
-\newcommand{\SUBTITLE}{\fixme{Add English subtitle}}
+\newcommand{\SUBTITLE}{Implementing a Responsive Cross-Platform Application}
 \newcommand{\FSUBTITLE}{\fixme{Add Finnish subtitle}}
 \newcommand{\DATE}{\fixme{Add English date}}
 \newcommand{\FDATE}{\fixme{Add Finnish date}}
