--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -317,12 +317,24 @@ failing only when the network connection seems to be completely down.
 \section{Graphics and Animations}
 \label{section:graphics}
 
+
+
 \section{Following JavaScript Best Practices}
 \label{section:js-best-practices}
 
 \subsection{JSLint}
 
+JSLint\footnote{\url{http://jslint.com/}} is a code quality tool for
+JavaScript. There are several JavaScript features that are suboptimal
+for performance or code maintainability. JSLint also checks for
+JavaScript syntax and convention violations, which is valuable because
+the code will be sent in the source form to be interpreted by the
+browser.
 
+We had automatic JSLint checking integrated in the Emacs
+\citationneeded editor that we used for all JavaScript programming,
+which helped to notice common errors as early as possible and made the
+code cleaner.
 
 \subsection{Lazy initialization}
 
